--- a/frontend/myholler.html
+++ b/frontend/myholler.html
@@ -17,38 +17,23 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="../../index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../../profile.html">Profile</a>
+                    <a class="nav-link" href="./profile.html">Profile</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../../myholler.html">My Hollers</a>
+                    <a class="nav-link" href="./myholler.html">My Hollers</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../../hollerlist.html">All Hollers</a>
+                    <a class="nav-link" href="./hollerlist.html">All Hollers</a>
                 </li>
                 <li class="nav-item my-2 my-lg-0">
-                    <a class=" nav-link" href="./admin.html">Admin</a>
+                    <a class="nav-link" href="./API/V1/admin.html">Admin</a>
                 </li>
             </ul>
         </div>
     </nav>
-    <div class="ml-3">
-        <h1>Admin Page</h1>
-        <br>
-        <form id="adminlogin">
-            <label for="name">Username: </label>
-            <input type="text" name="name">
-            <br>
-            <label for="password">Password: </label>
-            <input type="password" name="password">
-            <br>
-            <input type="submit" value="Sign-In">
-        </form>
-        <div id="results" class="ml-2"></div>
-    </div>
-    <script src="./scripts/admin.js"></script>
 </body>
 
 </html>
