--- a/frontend/hollerlist.html
+++ b/frontend/hollerlist.html
@@ -29,11 +29,26 @@
                     <a class="nav-link" href="./hollerlist.html">All Hollers</a>
                 </li>
                 <li class="nav-item my-2 my-lg-0">
-                  <a class=" nav-link" href="./API/V1/admin.html">Admin</a>
+                    <a class=" nav-link" href="./API/V1/admin.html">Admin</a>
                 </li>
             </ul>
+            <div id="navProfile">
+                <form class="form-inline my-2 my-lg-0" id="loginForm">
+                    <input class="form-control mr-sm-2" type="text" placeholder="Username" aria-label="Search"
+                        name="name">
+                    <input class="form-control mr-sm-2" type="password" placeholder="Password" aria-label="Search"
+                        name="password">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+                </form>
+            </div>
         </div>
     </nav>
+    <br>
+    <ul id="allHollers">
+        <li>Loading Hollers...</li>
+    </ul>
+    <script src="./js/constants.js"></script>
+    <script src="./js/login.js"></script>
 </body>
 
 </html>
