--- a/frontend/myholler.html
+++ b/frontend/myholler.html
@@ -32,8 +32,20 @@
                     <a class="nav-link" href="./API/V1/admin.html">Admin</a>
                 </li>
             </ul>
+            <div id="navProfile">
+                <form class="form-inline my-2 my-lg-0" id="loginForm">
+                    <input class="form-control mr-sm-2" type="text" placeholder="Username" aria-label="Search"
+                        name="name">
+                    <input class="form-control mr-sm-2" type="password" placeholder="Password" aria-label="Search"
+                        name="password">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+                </form>
+            </div>
         </div>
     </nav>
+    <script src="./js/constants.js"></script>
+    <script src="./js/login.js"></script>
+    <script src="./js/myholler.js"></script>
 </body>
 
 </html>
