--- a/frontend/hollerlist.html
+++ b/frontend/hollerlist.html
@@ -16,8 +16,8 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./profile.html">Profile</a>
@@ -25,8 +25,8 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./myholler.html">My Hollers</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./hollerlist.html">All Hollers</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="./hollerlist.html">All Hollers <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item my-2 my-lg-0">
                     <a class=" nav-link" href="./API/V1/admin.html">Admin</a>
@@ -49,6 +49,8 @@
     </ul>
     <script src="./js/constants.js"></script>
     <script src="./js/login.js"></script>
+    <script src="./js/Holler.js"></script>
+    <script src="./js/allholler.js"></script>
 </body>
 
 </html>
