--- a/frontend/myholler.html
+++ b/frontend/myholler.html
@@ -16,14 +16,14 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./profile.html">Profile</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./myholler.html">My Hollers</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="./myholler.html">My Hollers <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./hollerlist.html">All Hollers</a>
@@ -43,8 +43,17 @@
             </div>
         </div>
     </nav>
+    <br>
+    <div id="hollerSpace">
+        <div class="text-center">
+            <h4>Log in to view Hollers.</h4>
+            <br>
+            <a href="./profile.html"><button>Create an account</button></a>
+        </div>
+    </div>
     <script src="./js/constants.js"></script>
     <script src="./js/login.js"></script>
+    <script src="./js/Holler.js"></script>
     <script src="./js/myholler.js"></script>
 </body>
 
